[gd_scene load_steps=5 format=3 uid="uid://o6m2citjubjq"]

[ext_resource type="Script" path="res://Scripts/gamescene.gd" id="1_ro2ly"]
[ext_resource type="AudioStream" uid="uid://b33omyf38qxva" path="res://Assets/menu.mp3" id="2_rkgm8"]
[ext_resource type="Texture2D" uid="uid://bk0ugw00wkduv" path="res://Assets/amiga.jpeg" id="3_jnpuh"]

[sub_resource type="GDScript" id="GDScript_tmx4j"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ro2ly")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.28485, 0.28485, 0.28485, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.5
offset_top = -48.0
offset_right = 324.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Pedra"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Papel"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Tesoura"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.5
offset_right = 201.5
offset_bottom = 115.0
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Eu escolho..."

[node name="Label2" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
script = SubResource("GDScript_tmx4j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rkgm8")
autoplay = true

[node name="Node2D" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 102.0
offset_right = 1284.0
offset_bottom = 1382.0
scale = Vector2(0.414844, 0.400781)
texture = ExtResource("3_jnpuh")
expand_mode = 1

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
